browser/base/content/browser.css
/* ... */
toolbarbutton.webextension-menuitem > .toolbarbutton-icon {
  width: 16px;
  height: 16px;
}

toolbarpaletteitem[removable="false"] {
  opacity: 0.5;
}

%ifndef XP_MACOSX
toolbarpaletteitem[place="palette"],
toolbarpaletteitem[place="menu-panel"],
toolbarpaletteitem[place="toolbar"] {
  -moz-user-focus: normal;
}
%endif

#bookmarks-toolbar-placeholder,
#bookmarks-toolbar-button,
toolbarpaletteitem > #personal-bookmarks > #PlacesToolbar,
#personal-bookmarks:-moz-any([overflowedItem=true], [cui-areatype="menu-panel"]) > #PlacesToolbar {
  display: none;
}

toolbarpaletteitem[place="toolbar"] > #personal-bookmarks > #bookmarks-toolbar-placeholder,
toolbarpaletteitem[place="palette"] > #personal-bookmarks > #bookmarks-toolbar-button,
#personal-bookmarks:-moz-any([overflowedItem=true], [cui-areatype="menu-panel"]) > #bookmarks-toolbar-button {
  display: -moz-box;
}

#personal-bookmarks {
  position: relative;
}

#PlacesToolbarDropIndicatorHolder {
  display: block;
  position: absolute;
}

#nav-bar-customization-target > #personal-bookmarks,
toolbar:not(#TabsToolbar) > #wrapper-personal-bookmarks,
toolbar:not(#TabsToolbar) > #personal-bookmarks {
  -moz-box-flex: 1;
}

#zoom-controls[cui-areatype="toolbar"]:not([overflowedItem=true]) > #zoom-reset-button > .toolbarbutton-text {
  display: -moz-box;
}

#reload-button:not([displaystop]) + #stop-button,
#reload-button[displaystop] {
  display: none;
}





#reload-button[disabled]:not(:-moz-window-inactive) > .toolbarbutton-icon {
  opacity: 1 !important;
}


.widget-overflow-list > #stop-reload-button > .toolbarbutton-1 {
  -moz-box-flex: 1;
}

#appMenu_historyMenu > .bookmark-item,
#appMenu-library-recentlyClosedTabs > .panel-subview-body > .bookmark-item,
#appMenu-library-recentlyClosedWindows > .panel-subview-body > .bookmark-item,
#appMenu-library-recentHighlights > .bookmark-item,
#panelMenu_bookmarksMenu > .bookmark-item {
  max-width: none;
}

%ifdef XP_MACOSX
:root[inFullscreen="true"] {
  padding-top: 0; 
}
%endif


#main-menubar[openedwithkey=false] .show-only-for-keyboard {
  display: none;
}



#urlbar,
#searchbar {
  

  width: 1px;
  min-width: 1px;
}


#urlbar-input:-moz-locale-dir(rtl) {
  text-align: right !important;
}




#urlbar-input[dir=ltr]:-moz-locale-dir(rtl) {
  text-align: left !important;
}

#urlbar-input[dir=rtl]:-moz-locale-dir(ltr) {
  text-align: right !important;
}








:root[remotecontrol] #urlbar:not(.megabar),
:root[remotecontrol] #urlbar.megabar > #urlbar-background {
  background: repeating-linear-gradient(
    -45deg,
    transparent,
    transparent 25px,
    rgba(255,255,255,.3) 25px,
    rgba(255,255,255,.3) 50px);
  background-color: rgba(255,170,68,.8);
  color: black;
}


.urlbar-input-box {
  position: relative;
  direction: ltr;
}
#urlbar-scheme {
  position: absolute;
  height: 100%;
  visibility: hidden;
  direction: ltr;
  pointer-events: none;
}



#urlbar[textoverflow="left"][domaindir="rtl"]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-scheme:valid {
  visibility: visible;
}




#urlbar[textoverflow="right"]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input {
  mask-image: linear-gradient(to left, transparent, black 3ch);
}
#urlbar[textoverflow="left"][domaindir="rtl"]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input {
  mask-image: linear-gradient(to right, transparent var(--urlbar-scheme-size), black calc(var(--urlbar-scheme-size) + 3ch));
}

#urlbar[textoverflow="left"][rtltext]:not([focused]):not([domaindir]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input,
#urlbar[textoverflow="right"][rtltext]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input {
  mask-image: linear-gradient(to right, transparent, black 3ch);
}

#urlbar-input {
  mask-repeat: no-repeat;
  unicode-bidi: plaintext;
  text-align: match-parent;
}

#urlbar[domaindir]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input {
  



  direction: ltr;
  unicode-bidi: embed;
}


@media (resolution: 2dppx) {
  .searchbar-engine-image {
    image-rendering: -moz-crisp-edges;
  }
}

#urlbar[actionoverride] > #urlbar-input-container > #urlbar-label-box,
#urlbar:not([actiontype="switchtab"]):not([actiontype="extension"]) > #urlbar-input-container > #urlbar-label-box,
#urlbar:not([actiontype="switchtab"]) > #urlbar-input-container > #urlbar-label-box > #urlbar-label-switchtab,
#urlbar:not([actiontype="extension"]) > #urlbar-input-container > #urlbar-label-box > #urlbar-label-extension {
  display: none;
}

#PopupAutoComplete > richlistbox > richlistitem[originaltype="loginsFooter"] {
  -moz-box-pack: center;
  color: -moz-fieldText;
  min-height: 2.6666em;
  border-top: 1px solid rgba(38,38,38,.15);
  background-color: hsla(0,0%,80%,.35); ;
}

#PopupAutoComplete > richlistbox > richlistitem[originaltype="loginsFooter"]:hover,
#PopupAutoComplete > richlistbox > richlistitem[originaltype="loginsFooter"][selected] {
  background-color: hsla(0,0%,80%,.5); 
}



#PopupAutoComplete[resultstyles~="loginsFooter"],
#PopupAutoComplete[resultstyles~="insecureWarning"] {
  min-width: 17em;
}

#PopupAutoComplete[resultstyles~="generatedPassword"] {
  min-width: 22em;
}

#PopupAutoComplete > richlistbox > richlistitem[originaltype="insecureWarning"] {
  height: auto;
}

#PopupAutoComplete > richlistbox > richlistitem[originaltype="loginWithOrigin"] > .ac-site-icon,
#PopupAutoComplete > richlistbox > richlistitem[originaltype="insecureWarning"] > .ac-site-icon {
  margin-inline-start: 0;
  display: initial;
}

#PopupAutoComplete > richlistbox > richlistitem[originaltype="insecureWarning"] > .ac-title > .ac-text-overflow-container > .ac-title-text {
  text-overflow: initial;
  white-space: initial;
}

#PopupAutoComplete > richlistbox > richlistitem[originaltype="insecureWarning"] > .ac-title > label {
  margin-inline-start: 0;
}
/* ... */

