Backed out changeset 8748e324ef44 (bug 1623888) for perma failures on browser_UrlbarInput_overflow.js. CLOSED TREE
UltraBlame original commit: 2330b35ff8c62308f72dc060f93976639b6f2297

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -608,7 +608,7 @@ toolbar:not(#TabsToolbar) > #personal-bookmarks {
 
 
 
-#urlbar[textoverflow="left"][domaindir="rtl"]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-scheme:valid {
+#urlbar[textoverflow="left"][hasrtldomain]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-scheme:valid {
   visibility: visible;
 }
 
@@ -618,28 +618,19 @@ toolbar:not(#TabsToolbar) > #personal-bookmarks {
 #urlbar[textoverflow="right"]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input {
   mask-image: linear-gradient(to left, transparent, black 3ch);
 }
-#urlbar[textoverflow="left"][domaindir="rtl"]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input {
-  mask-image: linear-gradient(to right, transparent var(--urlbar-scheme-size), black calc(var(--urlbar-scheme-size) + 3ch));
+
+#urlbar[textoverflow="left"][rtltext]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input {
+  mask-image: linear-gradient(to right, transparent, black 3ch);
 }
 
-#urlbar[textoverflow="left"][rtltext]:not([focused]):not([domaindir]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input,
-#urlbar[textoverflow="right"][rtltext]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input {
-  mask-image: linear-gradient(to right, transparent, black 3ch);
+#urlbar[textoverflow="left"][hasrtldomain]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input {
+  mask-image: linear-gradient(to right, transparent var(--urlbar-scheme-size), black calc(var(--urlbar-scheme-size) + 3ch));
 }
 
 #urlbar-input {
   mask-repeat: no-repeat;
   unicode-bidi: plaintext;
   text-align: match-parent;
-}
-
-#urlbar[domaindir]:not([focused]) > #urlbar-input-container > .urlbar-input-box > #urlbar-input {
-  
-
-
-
-  direction: ltr;
-  unicode-bidi: embed;
 }
 
 
